tarea U2M2 completa con ayuda de IA

--- a/M2/1-Tarea U2/resolucion_ej02.html
+++ b/M2/1-Tarea U2/resolucion_ej02.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuadrados Coloreados columna</title>
-    <link rel="stylesheet" href="resolucion_ej1.css">
+    <title>Cuadrados Coloreados fila invertida centrada</title>
+    <link rel="stylesheet" href="resolucion_ej02.css">
 </head>
 <body>
     <div class="container">
